--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ layout: default
                     <iframe
                         src="https://www.youtube.com/embed/iC3mXqIMbcQ?autoplay=1&controls=0&modestbranding=1;showinfo=0;rel=0"
                         frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
 
