declared url before baseurl.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@ layout: default
         <div class="row margin-0 padding-0 relative">
             <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
-                    <!--<video class="heroVideo portrait" poster="{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted playsinline preload autoplay loop>
-                    <source src="{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
+                    <!--<video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted playsinline preload autoplay loop>
+                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                 </video>-->
 
-                    <video class="heroVideo portrait" poster="{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline preload
+                    <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline preload
                         autoplay loop>
-                        <source src="{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
+                        <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
                         Your browser does not support the video tag.
                     </video>
 
-                    <video class="heroVideo landscape" poster="{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline preload
+                    <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline preload
                         autoplay loop>
-                        <source src="{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
+                        <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -50,7 +50,7 @@ layout: default
                 <div class="traniee-block bor-bot-7">
                     <div class="width-50 float-left mobile-home-img">
                         <a href="javascript:void(0)">
-                            <img src="{{ site.baseurl }}/assets/images/traniee.png" style="width: 100%;max-width: 500px;"
+                            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/traniee.png" style="width: 100%;max-width: 500px;"
                                 class="margin-left-5">
                         </a>
                     </div>
@@ -74,7 +74,7 @@ layout: default
 
                     <div class="width-100 bg-fc center bor-bot-7 watch-img">
                         <a href="javascript:void(0)">
-                            <img src="{{ site.baseurl }}/assets/images/watch.png">
+                            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/watch.png">
                         </a>
                     </div>
                 </div>
@@ -92,7 +92,7 @@ layout: default
                     </div>
                     <div class="width-50 float-right traiermoney-img">
                         <a href="javascript:void(0)">
-                            <img src="{{ site.baseurl }}/assets/images/tranier.png" class="bor-rad-20">
+                            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier.png" class="bor-rad-20">
                         </a>
                     </div>
                 </div>
@@ -108,17 +108,17 @@ layout: default
             Trending Sessions
         </h2>
         <div class="width-100  trending-section">
-            <img id="loading-image" src="{{ site.baseurl }}/assets/images/loading.gif" style="display:none;"/>
+            <img id="loading-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/loading.gif" style="display:none;"/>
              <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -135,13 +135,13 @@ layout: default
             <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -158,13 +158,13 @@ layout: default
             <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -181,13 +181,13 @@ layout: default
             <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -204,13 +204,13 @@ layout: default
             <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -227,13 +227,13 @@ layout: default
             <div class="trending-box relative">
                 <div class="width-100">
                     <span class="time-stamp">Oct 31 2019</span>
-                    <img class="bg-image" src="{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
+                    <img class="bg-image" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%">
                 </div>
 
                 <div class="trending-block">
                     <div class="trending-block-view">
-                        <img class="left-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
-                        <img class="right-align" src="{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="left-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                        <img class="right-align" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
                     </div>
                 </div>
 
@@ -254,11 +254,11 @@ layout: default
 <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
         <div class="width-100 top-banner">
-            <img src="{{ site.baseurl }}/assets/images/app-dash-view.png">
+            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
         </div>
         <div class="appinstall-details">
             <div class="width-100 bottom-logo">
-                <img src="{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
                 <p>
                     For the best experience, download the application.
                 </p>
@@ -283,23 +283,23 @@ layout: default
 <div class="instagram-feed relative">
     <div class="wrapper-to-center">
         <div class="instagram-block">
-            <img class="watcher pointer" width="100%" src="{{ site.baseurl }}/assets/images/home-banner.png">
+            <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-            <img class="watcher pointer" width="100%" src="{{ site.baseurl }}/assets/images/tranier-ex.png">
+            <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-            <img class="watcher pointer" width="100%" src="{{ site.baseurl }}/assets/images/home-banner.png">
+            <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-            <img class="watcher pointer" width="100%" src="{{ site.baseurl }}/assets/images/tranier-ex.png">
+            <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-            <img class="watcher pointer" width="100%" src="{{ site.baseurl }}/assets/images/home-banner.png">
+            <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
             <span class="instagram-feed-hover"></span>
         </div>
     </div>
@@ -451,7 +451,7 @@ layout: default
     </p>
 </div>
 <!-- js Files -->
-<script src="{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
 <script type='text/javascript'>
     (function () {
         var tp = document.createElement('script');
@@ -473,15 +473,15 @@ layout: default
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
 <!-- intel-input phone number validation -->
-<script src="{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
 <!-- Start of ubqfit Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
 </script>
 
 <!-- End of ubqfit Zendesk Widget script -->
-<script src="{{ site.baseurl }}/assets/js/custom.js"></script>
-<script src="{{ site.baseurl }}/assets/js/moment.js"></script>
-<script src="{{ site.baseurl }}/assets/js/services.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 
 <script>
     moment().format();
