--- a/gift.html
+++ b/gift.html
@@ -16,7 +16,7 @@ layout: default
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
       </a>
     </div>
     <div class="menumobileview">
@@ -68,11 +68,11 @@ layout: default
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
-          <img src="{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
           <p>
             For the best experience, download the application.
           </p>
@@ -99,14 +99,14 @@ layout: default
               <div class="row margin-0 relative">
                 <div class="width-100 home-banner heroContainer">
                   <div class="width-100">
-                    <!--<video class="heroVideo portrait" poster="{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted playsinline preload autoplay loop>
-                          <source src="{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
+                    <!--<video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted playsinline preload autoplay loop>
+                          <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
                           Your browser does not support the video tag.
                       </video>-->
                     <div class="overlay"
                       style="background-color:rgba(0,0,0,0.35);position:absolute;top:0;right:0;bottom:0;left:0;z-index:5;">
                     </div>
-                    <img class="heroVideo" src="{{ site.baseurl }}/assets/images/gift2.jpg" alt="Image of Christmas" />
+                    <img class="heroVideo" src="{{ site.url }}{{ site.baseurl }}/assets/images/gift2.jpg" alt="Image of Christmas" />
 
                     <div class="banner-tittle">
                       <h1>
@@ -137,7 +137,7 @@ layout: default
                         <!-- <h4 style="font-size:3rem;">🎄🎁</h4> -->
                         <!-- <p style="font-size:1.5rem;">$15</p> -->
                       </div>
-                      <!-- <img class="pricing-mobile-view" src="{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
+                      <!-- <img class="pricing-mobile-view" src="{{ site.url }}{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
@@ -192,7 +192,7 @@ layout: default
                         <!-- <h4 style="font-size:3rem;">🎄🎁🎁🎁</h4> -->
                         <!-- <p style="font-size:1.5rem;">$45</p> -->
                       </div>
-                      <!-- <img class="pricing-mobile-view" src="{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
+                      <!-- <img class="pricing-mobile-view" src="{{ site.url }}{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
@@ -241,7 +241,7 @@ layout: default
                         <!-- <h4 style="font-size:3rem; z-index:10; position:relative;">🎄🎁🎁🎁🎁</h4> -->
                         <!-- <p style="font-size:1.5rem; z-index:10; position:relative;">$100</p> -->
                       </div>
-                      <!-- <img class="pricing-mobile-view" src="{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
+                      <!-- <img class="pricing-mobile-view" src="{{ site.url }}{{ site.baseurl }}/assets/images/contact-bg.png" width="100%"> -->
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
@@ -300,7 +300,7 @@ layout: default
 
   <div class="width-100">
     <div class="link-session relative">
-      <img src="{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
       <div class="contact-link">
         <h3>
           Not just fit, UBQFIT.
@@ -320,11 +320,11 @@ layout: default
         <div id="textpuff-widget" class="relative margin-bottom-20"></div>
         <div class="app-store">
           <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank" rel="noreferrer noopener">
-            <img src="{{ site.baseurl }}/assets/images/apple.png">
+            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
           </a>
           <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US" target="_blank"
             rel="noreferrer noopener">
-            <img src="{{ site.baseurl }}/assets/images/googleplay.png">
+            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
           </a>
         </div>
       </div>
@@ -536,7 +536,7 @@ layout: default
   </div>
 </div>
 <!-- js Files -->
-<script src="{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
 <script type='text/javascript'>
   (function () {
     var tp = document.createElement('script');
@@ -558,14 +558,14 @@ layout: default
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
 <!-- intel-input phone number validation -->
-<script src="{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
 <!-- Start of ubqfit Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
 </script>
 <!-- End of ubqfit Zendesk Widget script -->
-<script src="{{ site.baseurl }}/assets/js/custom.js"></script>
-<script src="{{ site.baseurl }}/assets/js/moment.js"></script>
-<script src="{{ site.baseurl }}/assets/js/services.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 
 <script>
   moment().format();
