Poster img added for banner video.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
             <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
                     <video class="heroVideo portrait"
-                        poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline
+                        poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
                         <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
                             type="video/mp4" class="portrait">
@@ -15,7 +15,7 @@ layout: default
                     </video>
 
                     <video class="heroVideo landscape"
-                        poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.jpg" muted playsinline
+                        poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
                         <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
                             type="video/mp4" class="landscape">
