--- a/gift.html
+++ b/gift.html
@@ -2,69 +2,6 @@
 layout: default
 ---
 <div class="containers">
-  <div class="header-top smaller center">
-    <p class="desktop-view-signup">
-      Get 95% off on a 1-on-1 Session. <a style="white-space: nowrap;" class="review_btn_prelaunch"
-        href="javascript:void(0)"> Sign Up</a>
-    </p>
-
-    <p class="mobile-view-signup">
-      Get 95% off on a 1-on-1 Session. <a style="white-space: nowrap;" class="review_btn_prelaunchs"
-        href="javascript:void(0)" onclick="openAppView()"> Sign Up</a>
-    </p>
-  </div>
-  <header>
-    <div class="logo">
-      <a href="index.html">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
-      </a>
-    </div>
-    <div class="menumobileview">
-      <a onclick="openAppView()" class="login" href="javascript:void(0)">Log In</a>
-      <a class="mobile-view" href="javascript:void(0)">Mobile-view</a>
-    </div>
-    <div class="menu nav">
-      <ul>
-        <li>
-          <a href="gift.html">Gift Card</a>
-        </li>
-        <li>
-          <a href="trainer.html">Trainer</a>
-        </li>
-        <li>
-          <a href="trainee.html">Trainee</a>
-        </li>
-        <li class="community">
-          <a class="community_menu dropdown-mobile" href="javascript:void(0)">Community</a>
-          <ul class="submenu">
-            <li>
-              <a href="ourstory.html">Our Story</a>
-            </li>
-            <li>
-              <a href="testimonials.html">
-                Testimonials</a>
-            </li>
-            <li>
-              <a href="blog.html">
-                Blog</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="pricing.html">Pricing</a>
-        </li>
-        <li class="login web-login">
-          <a href="javascript:void(0)">Log In</a>
-        </li>
-        <li onclick="openAppView()" class="mobile-signup">
-          <a href="javascript:void(0)">Sign Up</a>
-        </li>
-      </ul>
-    </div>
-  </header>
-
-  <!-- // app install page view -->
-
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
@@ -72,7 +9,8 @@ layout: default
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
+            height="35px">
           <p>
             For the best experience, download the application.
           </p>
@@ -106,7 +44,8 @@ layout: default
                     <div class="overlay"
                       style="background-color:rgba(0,0,0,0.35);position:absolute;top:0;right:0;bottom:0;left:0;z-index:5;">
                     </div>
-                    <img class="heroVideo" src="{{ site.url }}{{ site.baseurl }}/assets/images/gift2.jpg" alt="Image of Christmas" />
+                    <img class="heroVideo" src="{{ site.url }}{{ site.baseurl }}/assets/images/gift2.jpg"
+                      alt="Image of Christmas" />
 
                     <div class="banner-tittle">
                       <h1>
@@ -132,7 +71,7 @@ layout: default
                     <div class="panel panel-danger panel-pricing"
                       style="background-color: white;border:1px solid #AAAAAA; border-radius:8px;">
                       <div class="panel-heading"
-                        style="background-image: url('/images/gift3.jpg');background-size:cover;background-position:center center; min-height:200px;">
+                        style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/gift3.jpg');background-size:cover;background-position:center center; min-height:200px;">
 
                         <!-- <h4 style="font-size:3rem;">🎄🎁</h4> -->
                         <!-- <p style="font-size:1.5rem;">$15</p> -->
@@ -187,7 +126,7 @@ layout: default
                     <div class="panel panel-danger panel-pricing"
                       style="background-color: white;border:1px solid #AAAAAA; border-radius:8px;">
                       <div class="panel-heading"
-                        style="background-image: url('/images/gift.jpg');background-size:cover;background-position:center center; min-height:200px;">
+                        style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/gift.jpg');background-size:cover;background-position:center center; min-height:200px;">
 
                         <!-- <h4 style="font-size:3rem;">🎄🎁🎁🎁</h4> -->
                         <!-- <p style="font-size:1.5rem;">$45</p> -->
@@ -237,7 +176,7 @@ layout: default
                     <div class="panel panel-danger panel-pricing"
                       style="background-color: white;border:1px solid #AAAAAA; border-radius:8px;">
                       <div class="panel-heading"
-                        style="background-image: url('/images/watch-christmas.jpg');background-size:cover;background-position:center center; min-height:200px;">
+                        style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/watch-christmas.jpg');background-size:cover;background-position:center center; min-height:200px;">
                         <!-- <h4 style="font-size:3rem; z-index:10; position:relative;">🎄🎁🎁🎁🎁</h4> -->
                         <!-- <p style="font-size:1.5rem; z-index:10; position:relative;">$100</p> -->
                       </div>
@@ -297,134 +236,6 @@ layout: default
       </div>
     </div>
   </div>
-
-  <div class="width-100">
-    <div class="link-session relative">
-      <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
-      <div class="contact-link">
-        <h3>
-          Not just fit, UBQFIT.
-        </h3>
-        <p>
-          Download our mobile app and revolutionize your fitness experience.
-        </p>
-        <!-- <div class="footer-form-wrapper form-field relative margin-bottom-20">
-                  <input id="homePhoneNumber" type="tel" [(ngModel)]="phoneNumber"
-                      (keyup)="phoneNumberChange('keyup');" placeholder="Phone number" class="form-control">
-                  <div class="error" *ngIf="saveFlag && phoneNumber && !isPhoneNumberValid">
-                      Phone Number Invalid
-                  </div>
-                  <button class="cmg-soon" (click)="phoneNumberChange('sentLink')">Send Link</button>
-
-              </div> -->
-        <div id="textpuff-widget" class="relative margin-bottom-20"></div>
-        <div class="app-store">
-          <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank" rel="noreferrer noopener">
-            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
-          </a>
-          <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US" target="_blank"
-            rel="noreferrer noopener">
-            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <ul>
-
-        <!-- <li>
-            <a (click)="openZendesk()" href="javascript:void(0)">Start a live chat</a>
-          </li>
-          <li>
-            <a (click)="openZendesk()" href="javascript:void(0)">Visit Support Center</a>
-          </li> -->
-        <ul class="socail-icon">
-          <h4>
-            Our Social
-          </h4>
-          <li>
-            <a class="fb" href="https://www.facebook.com/ubqfit" target="_blank" rel="noreferrer">fb</a>
-          </li>
-          <li>
-            <a class="instagram" href="https://www.instagram.com/ubqfit/" target="_blank" rel="noreferrer">Instagram</a>
-          </li>
-          <li>
-            <a class="twitter" href="https://twitter.com/ubqfit" target="_blank" rel="noreferrer">twitter</a>
-          </li>
-          <li>
-            <a class="linkedin" href="https://www.linkedin.com/company/ubqfit/" target="_blank"
-              rel="noreferrer">linkedin</a>
-          </li>
-          <!-- <li>
-                              <a class="pintrest" href="javascript:void(0)">pintrest</a>
-                            </li> -->
-        </ul>
-      </ul>
-      <ul>
-        <h4>
-          Join Us
-        </h4>
-        <li>
-          <a href="trainer.html">Trainers</a>
-        </li>
-        <li>
-          <a href="trainee.html">Trainees</a>
-        </li>
-        <li>
-          <a href="testimonials.html">Testimonials</a>
-        </li>
-      </ul>
-      <ul>
-        <h4>
-          About
-        </h4>
-        <li>
-          <a href="ourstory.html">Our Story</a>
-        </li>
-        <li>
-          <a href="blog.html">Blog</a>
-        </li>
-      </ul>
-      <ul>
-        <h4>
-          Support
-        </h4>
-        <li>
-          <a href="contactus.html">Contact Us</a>
-        </li>
-        <!-- <li>
-                            <a (click)="openFaq()" href="javascript:void(0)">FAQs</a>
-                          </li> -->
-        <li>
-          <a class="helpdesk" href="javascript:void(0)">Chat</a>
-        </li>
-        <!-- <li>
-                            <a href="javascript:void(0)"><b>Phone</b>: +1 (866)-678-8888</a>
-                        </li> -->
-      </ul>
-    </footer>
-    <div class="copy-right">
-      <ul>
-        <p>
-          © 2019 UBQFIT
-        </p>
-        <li>
-          <a href="privacy-policy.html">Privacy Policy</a>
-        </li>
-        <li>
-          <a href="terms-conditions.html">Terms & Conditions</a>
-        </li>
-        <li>
-          <a href="dmca-policy.html">DMCA Policy</a>
-        </li>
-      </ul>
-    </div>
-    <div class="help-desk">
-      <a (click)="!isZenDeskOpend ? openZendesk() : closeZendesk()" class="support" href="javascript:void(0)">Chat</a>
-    </div>
-  </div>
-
 
 </div>
 <!--   containers -->
