Trainee code cleanup.

--- a/trainee.html
+++ b/trainee.html
@@ -10,7 +10,8 @@ layout: default
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
+            height="35px">
           <p>
             For the best experience, download the application.
           </p>
@@ -35,14 +36,18 @@ layout: default
               <div class="row margin-0 relative">
                 <div class="width-100 home-banner heroContainer">
                   <div class="width-100">
-                    <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload autoplay
-                      loop>
-                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
+                    <video class="heroVideo portrait"
+                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
+                      autoplay loop>
+                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
+                        type="video/mp4" class="portrait">
                       Your browser does not support the video tag.
                     </video>
-                    <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
+                    <video class="heroVideo landscape"
+                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                       autoplay loop>
-                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
+                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
+                        type="video/mp4" class="landscape">
                       Your browser does not support the video tag.
                     </video>
                     <div class="banner-tittle">
@@ -63,7 +68,8 @@ layout: default
               </h2>
               <div class="flex-center bor-bot-7">
                 <div class="width-50 float-left trainee-imgone">
-                  <img class="obj-cover margin-left-5" style="width: 100%;max-width: 500px;" src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-1.png">
+                  <img class="obj-cover margin-left-5" style="width: 100%;max-width: 500px;"
+                    src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-1.png">
                 </div>
                 <div class="width-50 float-right">
                   <p class="right-5">
@@ -85,7 +91,8 @@ layout: default
                   </div>
                 </div>
                 <div class="width-50 float-right watch-listimg">
-                  <img class="obj-cover" style="width: 100%;max-width: 500px;" src="{{ site.url }}{{ site.baseurl }}/assets/images/watch-connect.png">
+                  <img class="obj-cover" style="width: 100%;max-width: 500px;"
+                    src="{{ site.url }}{{ site.baseurl }}/assets/images/watch-connect.png">
                 </div>
               </div>
               <div class="width-100 broadcast-bg relative">
@@ -124,7 +131,8 @@ layout: default
                       style="width: 100%;max-width: 500px;height:auto;max-height:878px;margin:auto;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0;-o-object-fit:contain;object-fit:contain;">
                   </div>
                   <div class="width-50 float-right">
-                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}/assets/images/chat-group-2.png" width="100%">
+                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}/assets/images/chat-group-2.png"
+                      width="100%">
                   </div>
                 </div>
               </div>
@@ -139,7 +147,8 @@ layout: default
                   Book training sessions with your favorite trainer 30 days in advance.
                 </p>
                 <div class="image-center calender-flow-img" style="margin-bottom: 32px;">
-                  <img class="img-center " src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-calender-flow.png">
+                  <img class="img-center "
+                    src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-calender-flow.png">
                 </div>
               </section>
               <!-- Calender Section end-->
@@ -153,7 +162,8 @@ layout: default
     <div class="instagram-feed relative">
       <div class="wrapper-to-center">
         <div class="instagram-block">
-          <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+          <img class="watcher pointer" width="100%"
+            src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
           <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
@@ -161,7 +171,8 @@ layout: default
           <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-          <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+          <img class="watcher pointer" width="100%"
+            src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
           <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
@@ -169,7 +180,8 @@ layout: default
           <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
-          <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+          <img class="watcher pointer" width="100%"
+            src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
           <span class="instagram-feed-hover"></span>
         </div>
       </div>
@@ -275,63 +287,64 @@ layout: default
       </div>
     </div>
   </div>
-  <!-- js Files -->
-  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
-  <script type='text/javascript'>
-    (function () {
-      var tp = document.createElement('script');
-      tp.src = 'https://textpuff.com/textwidget/js/textpuffv2.js';
-      tp.type = 'text/javascript';
-      tp.async = 'true';
-      tp.onload = tp.onreadystatechange = function () {
-        var rs = this.readyState;
-        if (rs && rs != 'complete' && rs != 'loaded') return;
-        try {
-          var lng = 'en';
-          var sbtp = '';
-          verify._vd('b88dbd22ff117ae209becaf4c24950d293b3d2b5', 'tp1', sbtp, lng);
-        } catch (e) { }
-      };
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(tp, s);
-    })();
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
-  <!-- intel-input phone number validation -->
-  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
-  <!-- Start of ubqfit Zendesk Widget script -->
-  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
-  </script>
-  <!-- End of ubqfit Zendesk Widget script -->
-  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
-  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
-  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
+</div>
+<!-- js Files -->
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
+<script type='text/javascript'>
+  (function () {
+    var tp = document.createElement('script');
+    tp.src = 'https://textpuff.com/textwidget/js/textpuffv2.js';
+    tp.type = 'text/javascript';
+    tp.async = 'true';
+    tp.onload = tp.onreadystatechange = function () {
+      var rs = this.readyState;
+      if (rs && rs != 'complete' && rs != 'loaded') return;
+      try {
+        var lng = 'en';
+        var sbtp = '';
+        verify._vd('b88dbd22ff117ae209becaf4c24950d293b3d2b5', 'tp1', sbtp, lng);
+      } catch (e) { }
+    };
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(tp, s);
+  })();
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
+<!-- intel-input phone number validation -->
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
+<!-- Start of ubqfit Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
+</script>
+<!-- End of ubqfit Zendesk Widget script -->
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 
-  <script>
-    moment().format();
-  </script>
-  <script>
-    $(function () {
-      $('.iframe_close').click(function () {
-        $('iframe').attr('src', $('iframe').attr('src'));
-      });
+<script>
+  moment().format();
+</script>
+<script>
+  $(function () {
+    $('.iframe_close').click(function () {
+      $('iframe').attr('src', $('iframe').attr('src'));
     });
+  });
 
-    function loadDefaultImage(obj) {
-      var id = $(obj).attr('data-id');
-      $(obj).addClass('hide');
-      $('#' + id).removeClass('hide');
-    }
+  function loadDefaultImage(obj) {
+    var id = $(obj).attr('data-id');
+    $(obj).addClass('hide');
+    $('#' + id).removeClass('hide');
+  }
 
 
-    // URL Redirect
+  // URL Redirect
 
-    function goToURL() {
-      //window.open('https://ubqfit.com/', '_blank');
-    }
-  </script>
-  <style type="text/css">
-    .src-component-launcher-WidgetLauncher-wrapper {
-      display: none;
-    }
-  </style>
+  function goToURL() {
+    //window.open('https://ubqfit.com/', '_blank');
+  }
+</script>
+<style type="text/css">
+  .src-component-launcher-WidgetLauncher-wrapper {
+    display: none;
+  }
+</style>
