--- a/trainee.html
+++ b/trainee.html
@@ -19,9 +19,9 @@ layout: default
         <div class="width-100 bottom-app">
           <a class="app-badge"
             href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-              src="https://ubqfit.com/images/googleplay.png"></a>
+              src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png"></a>
           <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
-            rel="noreferrer noopener"><img src="https://ubqfit.com/images/apple.png"></a>
+            rel="noreferrer noopener"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png"></a>
         </div>
       </div>
     </div>
@@ -340,7 +340,7 @@ layout: default
   // URL Redirect
 
   function goToURL() {
-    //window.open('https://ubqfit.com/', '_blank');
+    //window.open('{{ site.url }}{{ site.baseurl }}/assets/', '_blank');
   }
 </script>
 <style type="text/css">
