--- a/testimonials.html
+++ b/testimonials.html
@@ -10,7 +10,8 @@ layout: default
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
+            height="35px">
           <p>
             For the best experience, download the application.
           </p>
@@ -33,20 +34,18 @@ layout: default
             <div class="row margin-0">
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
-                  <!--<video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted playsinline preload autoplay loop>
-                        <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
-                        Your browser does not support the video tag.
-                    </video>-->
-
-                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
-                    loop>
-                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
+                  <video class="heroVideo portrait"
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    autoplay loop>
+                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
+                      type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                   </video>
-
-                  <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
-                    loop>
-                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
+                  <video class="heroVideo landscape"
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    autoplay loop>
+                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
+                      type="video/mp4" class="landscape">
                     Your browser does not support the video tag.
                   </video>
                   <div class="banner-tittle">
@@ -58,16 +57,14 @@ layout: default
               </div>
             </div>
           </div>
-
           <section class="container testimonials-section">
             <div class="Testimonials-container">
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/cole.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/cole.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Cole</h4>
                   <small>6/12/2019</small>
@@ -98,11 +95,10 @@ layout: default
               </div>
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/ali.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/ali.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Ali</h4>
                   <small>6/09/2019</small>
@@ -133,11 +129,10 @@ layout: default
               </div>
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/rufia.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/rufia.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Rufia</h4>
                   <small>6/05/2019</small>
@@ -167,11 +162,10 @@ layout: default
               </div>
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/ian.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/ian.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Ian</h4>
                   <small>6/04/2019</small>
@@ -200,14 +194,12 @@ layout: default
                     the workout stats on screen make it easy for me to track my progress in each workout.</p>
                 </div>
               </div>
-
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/scott.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/scott.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Scott</h4>
                   <small>5/30/2019</small>
@@ -235,14 +227,12 @@ layout: default
                     stuff is the future, everyone needs to check this out!</p>
                 </div>
               </div>
-
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/diana.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/diana.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Diana</h4>
                   <small>5/26/2019</small>
@@ -275,14 +265,12 @@ layout: default
                     was feeling like throwing in the towel is extremely helpful for me.</p>
                 </div>
               </div>
-
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/zach.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/zach.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Zach</h4>
                   <small>5/25/2019</small>
@@ -314,14 +302,12 @@ layout: default
                     cool concept!!</p>
                 </div>
               </div>
-
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/frank.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/frank.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Frank</h4>
                   <small>5/24/2019</small>
@@ -351,16 +337,13 @@ layout: default
                     engaged but makes me forget I’m out on the road by myself! I have seen significant results and I
                     find myself making healthier decisions while traveling for business!</p>
                 </div>
-
               </div>
-
               <div class="testimonials-inner">
                 <div class="userouter-img">
-                  <div class="userImage" style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/derrick.jpg');">
+                  <div class="userImage"
+                    style="background-image: url('{{ site.url }}{{ site.baseurl }}/assets/images/testimonials/derrick.jpg');">
                   </div>
-
                 </div>
-
                 <div class="userText">
                   <h4>Derrick</h4>
                   <small>5/19/2019</small>
@@ -390,147 +373,16 @@ layout: default
                     With UBQFIT, I’ve been able to live broadcast my workouts classes to all of my clients worldwide
                     and acquire new ones at a fraction of the costs. </p>
                 </div>
-
               </div>
             </div>
         </div>
         </section>
-
       </div>
     </div>
   </div>
 </div>
 
-<div class="width-100">
-  <div class="link-session relative">
-    <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
-    <div class="contact-link">
-      <h3>
-        Not just fit, UBQFIT.
-      </h3>
-      <p>
-        Download our mobile app and revolutionize your fitness experience.
-      </p>
-      <!-- <div class="footer-form-wrapper form-field relative margin-bottom-20">
-                  <input id="homePhoneNumber" type="tel" [(ngModel)]="phoneNumber"
-                      (keyup)="phoneNumberChange('keyup');" placeholder="Phone number" class="form-control">
-                  <div class="error" *ngIf="saveFlag && phoneNumber && !isPhoneNumberValid">
-                      Phone Number Invalid
-                  </div>
-                  <button class="cmg-soon" (click)="phoneNumberChange('sentLink')">Send Link</button>
-
-              </div> -->
-      <div id="textpuff-widget" class="relative margin-bottom-20"></div>
-      <div class="app-store">
-        <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank" rel="noreferrer noopener">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
-        </a>
-        <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US" target="_blank"
-          rel="noreferrer noopener">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <footer>
-    <ul>
-      <!--
-          <li>
-            <a (click)="openZendesk()" href="javascript:void(0)">Start a live chat</a>
-          </li>
-          <li>
-            <a (click)="openZendesk()" href="javascript:void(0)">Visit Support Center</a>
-          </li> -->
-      <ul class="socail-icon">
-        <h4>
-          Our Social
-        </h4>
-        <li>
-          <a class="fb" href="https://www.facebook.com/ubqfit" target="_blank" rel="noreferrer">fb</a>
-        </li>
-        <li>
-          <a class="instagram" href="https://www.instagram.com/ubqfit/" target="_blank" rel="noreferrer">Instagram</a>
-        </li>
-        <li>
-          <a class="twitter" href="https://twitter.com/ubqfit" target="_blank" rel="noreferrer">twitter</a>
-        </li>
-        <li>
-          <a class="linkedin" href="https://www.linkedin.com/company/ubqfit/" target="_blank"
-            rel="noreferrer">linkedin</a>
-        </li>
-        <!-- <li>
-                              <a class="pintrest" href="javascript:void(0)">pintrest</a>
-                            </li> -->
-      </ul>
-    </ul>
-    <ul>
-      <h4>
-        Join Us
-      </h4>
-      <li>
-        <a href="trainer.html">Trainers</a>
-      </li>
-      <li>
-        <a href="trainee.html">Trainees</a>
-      </li>
-      <li>
-        <a href="testimonials.html">Testimonials</a>
-      </li>
-    </ul>
-    <ul>
-      <h4>
-        About
-      </h4>
-      <li>
-        <a href="ourstory.html">Our Story</a>
-      </li>
-      <li>
-        <a href="blog.html">Blog</a>
-      </li>
-    </ul>
-    <ul>
-      <h4>
-        Support
-      </h4>
-      <li>
-        <a href="contactus.html">Contact Us</a>
-      </li>
-      <!-- <li>
-                            <a (click)="openFaq()" href="javascript:void(0)">FAQs</a>
-                          </li> -->
-      <li>
-        <a class="helpdesk" href="javascript:void(0)">Chat</a>
-      </li>
-      <!-- <li>
-                            <a href="javascript:void(0)"><b>Phone</b>: +1 (866)-678-8888</a>
-                        </li> -->
-    </ul>
-  </footer>
-  <div class="copy-right">
-    <ul>
-      <p>
-        © 2019 UBQFIT
-      </p>
-      <li>
-        <a href="privacy-policy.html">Privacy Policy</a>
-      </li>
-      <li>
-        <a href="terms-conditions.html">Terms & Conditions</a>
-      </li>
-      <li>
-        <a href="dmca-policy.html">DMCA Policy</a>
-      </li>
-    </ul>
-  </div>
-  <div class="help-desk">
-    <a (click)="!isZenDeskOpend ? openZendesk() : closeZendesk()" class="support" href="javascript:void(0)">Chat</a>
-  </div>
-</div>
-</div>
 <!--   containers -->
-
-
 
 <!-- Leave a review modal popup -->
 <div class="modal-backdrop">
