--- a/gift.html
+++ b/gift.html
@@ -255,8 +255,7 @@ layout: default
       </div>
       <form id="newModalForm" style="padding-top:16px;">
         <p>
-          First 100 get a 1-on-1 live training session for 95% off on the UBQFIT app with our exciting
-          certified vetted trainers.
+          First 100 get a 1-on-1 live training session for ONLY $1 on the UBQFIT app with our exciting certified vetted trainers.
         </p>
         <center>
           <p style="text-align:center;"><i><b>Not just fit, UBQFIT!</b></i></p>
