--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@ layout: default
             </div>
             <form id="newModalForm" style="padding-top:16px;">
                 <p>
-                    First 100 get a 1-on-1 live training session for 95% off on the UBQFIT app with our exciting
-                    certified vetted trainers.
+                    First 100 get a 1-on-1 live training session for ONLY $1 on the UBQFIT app with our exciting certified vetted trainers.
                 </p>
                 <center>
                     <p style="text-align:center;"><i><b>Not just fit, UBQFIT!</b></i></p>
@@ -219,14 +218,11 @@ layout: default
                             <div class="multi-select-check-box" style="padding-top: 8px;padding-bottom: 8px;">
                                 <br>
                                 <label style="height:25px;padding:0;"><input style="margin:6px;" type="checkbox"
-                                        name="personas" onChange="multiSelectChanged('personas2')" value="2">looking for
-                                    a trainer</label>
+                                        name="personas" onChange="multiSelectChanged('personas2')" value="2">looking for a trainer</label>
                                 <label style="height:25px;padding:0;"><input style="margin:6px;" type="checkbox"
-                                        name="personas" onChange="multiSelectChanged('personas3')" value="3">a
-                                    trainer</label>
+                                        name="personas" onChange="multiSelectChanged('personas3')" value="3">a trainer</label>
                                 <label style="height:25px;padding:0;"><input style="margin:6px;" type="checkbox"
-                                        name="personas" onChange="multiSelectChanged('personas4')" value="4">an
-                                    influencer</label>
+                                        name="personas" onChange="multiSelectChanged('personas4')" value="4">an influencer</label>
                             </div>
                         </div>
                     </div>
