ISO App Download from chrome.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ layout: default
                         <a class="app-badge" style="margin-right: 11px;"
                             href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
                                 src="https://ubqfit.com/images/googleplay.png"></a>
-                        <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
-                            rel="noreferrer noopener"><img src="https://ubqfit.com/images/apple.png"></a>
+                        <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233">
+                            <img  src="https://ubqfit.com/images/apple.png"  
+                            alt="Ubqfit app from appstore for IOS">
+                        </a>
                     </div>
                     <div class="width-100 button">
                         <button class="redclr-border border-button review_btn margin-right-0">Watch Video</button>
