Removed autoplay from our story page.

--- a/ourstory.html
+++ b/ourstory.html
@@ -114,7 +114,7 @@ layout: default
         <div class="modal-body">
           <div class="video ">
             <iframe src="https://www.youtube.com/embed/iC3mXqIMbcQ?autoplay=1" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
