--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-heroVideoLandscape: "/assets/images/video/hero_vid_landscape.mp4"
-heroVideoPortrait: "/assets/images/video/hero_vid_portrait.mp4"
+hero_video_portrait: "/assets/images/hero_vid_landscape.mp4"
+heroVideoPortrait: "/assets/images/hero_vid_portrait.mp4"
 
 ---
 <div class="containers">
@@ -12,7 +12,7 @@ heroVideoPortrait: "/assets/images/video/hero_vid_portrait.mp4"
                     <video class="heroVideo portrait"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.heroVideoPortrait }}"
+                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
                             type="video/mp4" class="portrait">
                         Your browser does not support the video tag.
                     </video>
