--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_landscape.mp4"
-heroVideoPortrait: "/assets/images/hero_vid_portrait.mp4"
+hero_video_landscape: "/assets/images/hero_vid_portrait.mp4"
 
 ---
 <div class="containers">
@@ -20,7 +20,7 @@ heroVideoPortrait: "/assets/images/hero_vid_portrait.mp4"
                     <video class="heroVideo landscape"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.heroVideoLandscape }}"
+                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
                             type="video/mp4" class="landscape">
                         Your browser does not support the video tag.
                     </video>
