Moved headed title and description in psge variable.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_title: "Live 1-on-1 Workouts"
+hero_video_description: "Train when you want, where you want, without commitments."
 
 ---
 <div class="containers">
@@ -26,8 +28,8 @@ hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
                     </video>
                 </div>
                 <div class="home-signup">
-                    <h1>Live 1-on-1 Workouts</h1>
-                    <h2>Train when you want, where you want, without commitments.</h2>
+                    <h1>{{ page.hero_video_title }}</h1>
+                    <h2>{{ page.hero_video_description }}</h2>
                     <div class="width-100 app-badge-content">
                         <a class="app-badge" style="margin-right: 11px;"
                             href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
