hero_video_button_label added as page variable.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
-hero_video_title: Live 1-on-1 Workouts
-hero_video_description: Train when you want, where you want, without commitments.
+hero_video_title: "Live 1-on-1 Workouts"
+hero_video_description: "Train when you want, where you want, without commitments.""
+hero_video_button_label: "Watch Video"
 
 ---
 <div class="containers">
@@ -40,7 +41,7 @@ hero_video_description: Train when you want, where you want, without commitments
                         </a>
                     </div>
                     <div class="width-100 button">
-                        <button class="redclr-border border-button review_btn margin-right-0">Watch Video</button>
+                        <button class="redclr-border border-button review_btn margin-right-0">{{ page.hero_video_button_label }}</button>
                     </div>
                 </div>
             </div>
