new field added in gift

--- a/gift.html
+++ b/gift.html
@@ -3,6 +3,7 @@ layout: default
 hero_image: "/assets/images/gift2.jpg"
 hero_image_title: The Gift That Keeps On Giving
 hero_image_description: Give someone the special gift of a live workout
+hero_image_new: "/assets/images/gift2.jpg"
 
 ---
 <div class="containers">
