Display gift amount from cms.

--- a/gift.html
+++ b/gift.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 hero_image: "/assets/images/gift2.jpg"
-hero_image_title: The Gift That Keeps On Giving
-hero_image_description: Give someone the special gift of a live workout
+hero_image_title: "The Gift That Keeps On Giving"
+hero_image_description: "Give someone the special gift of a live workout"
+gift_one_amount: 15
+gift_two_amount: 45
+gift_three_amount: 100
 
 ---
 <div class="containers">
@@ -84,7 +87,7 @@ hero_image_description: Give someone the special gift of a live workout
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
-                          $15</p>
+                          ${{ page.gift_one_amount }}</p>
                         <ul class="list-group ">
                           <li class="list-group-item tick-price" style="color:black;"> 1 Virtual Training Session</li>
                         </ul>
@@ -139,7 +142,7 @@ hero_image_description: Give someone the special gift of a live workout
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
-                          $45</p>
+                          ${{ page.gift_two_amount }}</p>
                         <ul class="list-group ">
                           <li class="list-group-item tick-price" style="color:black;"> 3 Virtual Training Sessions</li>
                         </ul>
@@ -188,7 +191,7 @@ hero_image_description: Give someone the special gift of a live workout
                       <div class="panel-body " style="min-height:400px;">
                         <p
                           style="font-size:1.5rem; z-index:10; position:relative;color:white;margin:0;color:black;z-index:1;">
-                          $100</p>
+                          ${{ page.gift_three_amount }}</p>
                         <ul class="list-group ">
                           <li class="list-group-item tick-price" style="color:black;"> 5 Virtual Training Sessions</li>
                           <li class="list-group-item tick-price" style="color:black;"> 1 UBQFIT Watch</li>
